# btretrodetect

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements  setup.py
.github/workflows/: pypi.yml  python-package.yml
btretrodetect/: __init__.py
examples/: Demo.ipynb  labels_photos_June08.csv
jupyter/: Demo.ipynb  New Retrodetect Train ML.ipynb
retrodetect/: __init__.py  bee_track_clf.p  beetrack.model
src/bee-retrodetect/: __init__.py  detect.py  image_processing.py  normxcorr2.py
src/bee_retrodetect/: __init__.py  detect.py
src/bee_retrodetect/image_processing/: __init__.py  image_processing.py  normxcorr2.py
src/retrodetect/: __init__.py  detect.py
src/retrodetect/image_processing/: image_processing.py  normxcorr2.py
tests/: test_detect.py  test_image_processing.py  test_normxcorr2.py  testing.ipynb
tests/data/: contact_3_5_patch.npz  contact_3_5_searchpatch.npz  output_contact_n3  searchimg_3.npz
